--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:file:./test-db
+spring.datasource.url=jdbc:h2:mem:test-db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
