--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,16 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:test-db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:test-db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/db_example
+spring.datasource.username=root
+spring.datasource.password=20112003
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 jwt.header=Authorization
 jwt.secret=mySecret
